-Added appropriate call to startApp() to ensure that the controller.so gets loaded. Previously this function was within updateGraphData(), which I had removed on account of the fact that I did not consider it necessary. -Updated the Makefile to create zip file by default.

--- a/Application/remote_acquire_utility/index.html
+++ b/Application/remote_acquire_utility/index.html
@@ -97,6 +97,8 @@
         async: false
       });
     };
+
+    startApp();
     
   });
   
@@ -114,8 +116,7 @@
           JSON.stringify({ datasets: { params: def_params } })
         )
         .done(function(dresult) {
-          app_started = true;
-          updateGraphData();      
+          app_started = true;     
         })
         .fail(function() {
           showModalError('Could not initialize the application with default parameters.', false, true);
