--- a/Application/remote_acquire_utility/index.html
+++ b/Application/remote_acquire_utility/index.html
@@ -126,6 +126,8 @@
                 sendParams();
                 $(this).removeClass('btn-success');
                 $(this).addClass('btn-danger');
+                $(this).find('span').removeClass('glyphicon-play');
+                $(this).find('span').addClass('glyphicon-stop');
             }
             else
             {
@@ -134,6 +136,8 @@
                 sendParams();
                 $(this).removeClass('btn-danger');
                 $(this).addClass('btn-success');
+                $(this).find('span').removeClass('glyphicon-stop');
+                $(this).find('span').addClass('glyphicon-play');
             }
 
         });
@@ -329,13 +333,9 @@
     </div>
     <div class="container">
         <div class="row">
-            <div class="col-xs-6 col-sm-4">
-                Hi!
+            <div class="col-xs-7 col-sm-7">
             </div>
-            <div class="col-xs-6 col-sm-4">
-                Sup!
-            </div>
-            <div class="col-xs-6 col-sm-4">
+            <div class="col-xs-5 col-sm-5">
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h3 class="panel-title">
