Added the "Back button".

--- a/Application/remote_acquire_utility/index.html
+++ b/Application/remote_acquire_utility/index.html
@@ -325,7 +325,8 @@
 <body>
     <div class="header">
         <div class="container">
-            <a id="btn_exit" class="pull-left" href="/index.html"></a> <img class="logo pull-left" src="../assets/images/logo_white.png">
+            <a id="btn_exit" class="pull-left" href="/index.html"><span class="glyphicon glyphicon-chevron-left" title="Exit" alt="Exit"></span></a>
+            <img class="logo pull-left" src="../assets/images/logo_white.png">
             <h2 class="page-title">
                     Remote Acquire Utility
                 </h2>
