--- a/Application/remote_acquire_utility/index.html
+++ b/Application/remote_acquire_utility/index.html
@@ -86,16 +86,34 @@
         // $('#b_scope_no_equalizer').val(params.b_scope_no_equalizer);
         // $('#b_scope_hv').val(params.b_scope_hv);
         // $('#scope_no_shaping').val(params.scope_no_shaping);
-        $('#port').on('change', function() {
-            params.port = parseInt($(this).val());
+        $('#protocol').on('change', function() {
+            params.b_use_udp = parseInt($(this).val());
+            sendParams();
         });
 
         $('#mode').on('change', function() {
             params.mode = parseInt($(this).val());
+            sendParams();
         });
 
-        $('#protocol').on('change', function() {
-            params.b_use_udp = parseInt($(this).val());
+        $('#scope_channel').on('change', function() {
+            params.scope_channel = parseInt($(this).val());
+            sendParams();
+        });
+
+        $('#b_scope_no_equalizer').on('change', function() {
+            params.b_scope_no_equalizer = parseInt($(this).val());
+            sendParams();
+        });
+
+        $('#b_scope_hv').on('change', function () {
+            params.b_scope_hv = parseInt($(this).val());
+            sendParams();
+        });
+
+        $('#scope_no_shaping').on('change', function (){
+            params.scope_no_shaping = parseInt($(this).val());
+            sendParams();
         });
 
         $('#address').on('change', function() {
@@ -106,15 +124,26 @@
                     params.ip_tup_b = parseInt(ipaddr.parse($('#address').val()).octets[1]);
                     params.ip_tup_c = parseInt(ipaddr.parse($('#address').val()).octets[2]);
                     params.ip_tup_d = parseInt(ipaddr.parse($('#address').val()).octets[3]);
+                    sendParams();
             } else {
                 $('#address').val('IP Address Was Invalid!');
                 $("#address").css({"background-color": "#ff99cc"});
                 $('#address-div').addClass('has-error');
             }
-
         });
 
-        $('#btn_set_config').on('click', function() {
+        $('#port').on('change', function() {
+            params.port = parseInt($(this).val());
+            sendParams();
+        });
+
+        $('#bytes_to_transfer').on('change', function() {
+            params.bytes_to_transfer = parseInt($(this).val());
+            sendParams();
+        });
+
+        $('#scope_decimation').on('change', function() {
+            params.scope_decimation = parseInt($(this).val());
             sendParams();
         });
 
@@ -280,7 +309,6 @@
             })
             .done(function(dresult) {
                 // OK: Load the params received as POST result
-                showModalNotification('Parameters sent successfully.');
                 if (dresult.datasets !== undefined && dresult.datasets.params !== undefined) {
                     loadParams(dresult.datasets.params);
                 } else if (dresult.status == 'ERROR') {
@@ -442,23 +470,20 @@
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label for="decimation" class="col-xs-4 control-label">Decimation:</label>
+                                <label for="scope_decimation" class="col-xs-4 control-label">Decimation:</label>
                                 <div class="col-xs-8">
-                                    <input type="text" class="form-control" id="decimation" placeholder="NA">
+                                    <input type="text" class="form-control" id="scope_decimation" placeholder="NA">
                                 </div>
                             </div>
                         </form>
                         <div class="row text-center">
-                            <div class="col-xs-3"></div>
-                            <div class="col-xs-3">
-                                <button id="btn_set_config" class="btn btn-success" disabled>Set Config</button>
-                            </div>
-                            <div class="col-xs-3">
+                            <div class="col-xs-4"></div>
+                            <div class="col-xs-4">
                                 <button id="btn_start_stop" class="btn btn-success">
                                     <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
                                 </button>
                             </div>
-                            <div class="col-xs-3"></div>
+                            <div class="col-xs-4"></div>
                         </div>
                     </div>
                 </div>
